@@ -6,6 +6,8 @@ Revision history for DBIx::Class
         - Unaliased "dark" selectors no longer throw off prefetch
         - Fix proper composition of bind values across all possible
           SQL areas ( group_by => \[ ... ] now works properly )
+        - Allow populate to skip empty has_many relationships which makes
+          it easier to pass HashRefInflator data directly to ->populate
 
     * Misc
         - Fix test warning on win32 - at this point the test suite is
